<resources>
    <string name="app_name">HomeCafe</string>
    <string name="home_btn_try_get_http_method">테스트</string>
    <string name="home_et_id">ㅎㅇ</string>
    <string name="home_et_pw">pwd</string>
    <string name="home_btn_try_post_http_method">확인</string>
    <string name="main_btm_nav_home_title">홈</string>
    <string name="main_btm_nav_my_page_title">profile</string>
    <string name="user_nickname">nickname</string>
    <string name="plus">피드추가</string>
    <string name="btn_test">사진 업로드</string>
    <string name="kakao_app_key">3d77fb07d14610ef1b74ef5680caf6f7</string>
    <string name="kakao_scheme">kakao3d77fb07d14610ef1b74ef5680caf6f7</string>
    <string name="comment">댓글 17개</string>
    <string name="like_count">좋아요 17개</string>
    <string name="add_feed">새 글 등록</string>
    <string name="photo_text">사진</string>
    <string name="photo_count_text">2/6</string>
    <string name="content">내용</string>
    <string name="content_hint">나만의 홈 카페에 대한 내용을 입력해보세요 :)</string>
    <string name="upload">등록하기</string>

    <string name="example">해피의 카페</string>
    <string name="content_example">안녕하세요 오늘은 집에서 베이킹을 해봤어요! \n 아이들이 너무 좋아하네요!!</string>
    <string name="comment_view">댓글보기</string>
    <string name="update">수정하기</string>
    <string name="delete">삭제하기</string>
</resources>