<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_main_btm_nav_home"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/home_main"
        android:iconTint="@color/black"
        android:title="@string/main_btm_nav_home_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_btm_nav_plus"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/invalid_name"
        android:iconTint="@color/brown_700"
        android:title="@string/plus"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_main_btm_nav_my_page"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/profile_main"
        android:iconTint="@color/brown_700"
        android:title="@string/main_btm_nav_my_page_title"
        app:showAsAction="always" />

</menu>
