<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/add_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:text="@string/add_feed"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1.5sp"
        android:layout_marginTop="16sp"
        android:background="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_feed" />

    <TextView
        android:id="@+id/photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="27sp"
        android:layout_marginTop="24sp"
        android:text="@string/content"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <TextView
        android:id="@+id/photo_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:textColor="@color/brown_700"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@id/content"
        app:layout_constraintLeft_toRightOf="@id/content"
        app:layout_constraintTop_toTopOf="@id/content" />


    <EditText
        android:id="@+id/content_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8sp"
        android:background="@drawable/camera_background"
        android:hint="@string/content_hint"
        android:padding="15sp"
        android:textSize="13sp"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.39"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photo_text"
        app:layout_constraintWidth_percent="0.86" />

    <ImageView
        android:id="@+id/plus_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/invalid_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_marginRight="25sp"/>

    <View
        android:id="@+id/camara_view"
        android:layout_width="99dp"
        android:layout_height="99dp"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="27sp"
        android:visibility="visible"
        android:background="@drawable/camera_background"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/select_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9sp"
        app:layout_constraintStart_toStartOf="@id/photo_text"
        app:layout_constraintTop_toBottomOf="@id/content" />

    <!--    <ImageView-->
    <!--        android:id="@+id/select_img"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_marginLeft="25sp"-->
    <!--        android:layout_marginTop="10sp"-->
    <!--        android:src="@drawable/no_img"-->
    <!--        app:layout_constraintHeight_percent="0.16"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/photo_text"-->
    <!--        app:layout_constraintWidth_percent="0.275" />-->

    <ImageView
        android:id="@+id/upload_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/camera_img"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/camara_view"
        app:layout_constraintEnd_toEndOf="@id/camara_view"
        app:layout_constraintStart_toStartOf="@id/camara_view"
        app:layout_constraintTop_toTopOf="@id/camara_view" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo_text"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="21sp"
        app:layout_constraintStart_toStartOf="@id/photo_text"
        app:layout_constraintTop_toBottomOf="@id/content_edit" />



    <Button
        android:id="@+id/feed_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="28sp"
        android:background="@drawable/upload_btn_background"
        android:text="@string/upload"
        android:layout_marginTop="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.084"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.89" />

</androidx.constraintlayout.widget.ConstraintLayout>